--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -46,9 +46,9 @@ Timepix3-based beam telescope during test-beam campaigns at the CERN
 SPS. All of the assemblies have shown an excellent detection
 efficiency. In general, a more precise reconstruction of the tracks
 passing point was possible for multi-pixel clusters by weighting the
-energy deposits in the involved pixels. The $\eta$-algorithm, gave
-better results by taking into account the non-linearities due to the
-charge sharing. The results however have shown that the amount of
+energy deposits in the involved pixels. The $\eta$-algorithm, has
+given better results by taking into account the non-linearities due to
+the charge sharing. The results however have shown that the amount of
 charge sharing in such thin sensors is very low, limiting the
 achievable resolution.
 
@@ -76,7 +76,7 @@ wished to be achieved with pixels of $25\,\micron$ pitch and a sensor
 thickness of $50\,\micron$. Since data were not available for such a
 configuration, the simulations were extrapolated to small pixels. In
 the future, these results could be used as input for the digitiser in
-full detector simulations. The results show that achieving high
+full detector simulations. The results have shown that achieving high
 resolution with such thin sensors is very challenging. New detector
 concepts with enhanced charge sharing or even smaller pixel pitch will
 therefore be required.
@@ -90,7 +90,7 @@ fabrication process and the operation of such devices.
 
 At the nominal operating conditions, none of the assemblies were
 operated beyond the breakdown voltage. Most of the assemblies were
-found to be efficient up the physical edge of the sensor. For thin
+found to be efficient up to the physical edge of the sensor. For thin
 sensors of $50\,\micron$, the configurations without guard ring or
 with floating guard ring were the most suitable designs. A grounded
 guard ring was disfavoured due to the loss of efficiency close to the
